commented footer components

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,4 +1,4 @@
-.footerHolder {
+/* .footerHolder {
     background: #3886f7;
     color: white;
 }
@@ -36,4 +36,4 @@
 .socialLinkHolder span {
     padding-right: 12px;
     font-size: 16px;
-}
+} */
